fix: Addressed Simon's review comments